[gd_scene load_steps=19 format=3 uid="uid://clqd6cw1r46y8"]

[ext_resource type="Script" uid="uid://b4dsy1v4ljl26" path="res://scripts/ui/battles/BattleOptionsMenu.gd" id="1_vm04o"]
[ext_resource type="Texture2D" uid="uid://ddpukf3u74xr0" path="res://assets/interface/ui/panel-gradient-4.png" id="2_f8yp2"]
[ext_resource type="Texture2D" uid="uid://dlteajxyiio2x" path="res://assets/interface/ui/grabber.png" id="3_cptyg"]
[ext_resource type="AudioStream" uid="uid://bia60cj7of2o4" path="res://assets/audio/sfx/recordscratch.ogg" id="4_trj4p"]
[ext_resource type="AudioStream" uid="uid://crdbghfx0kv4j" path="res://assets/audio/sfx/blip.ogg" id="5_hover"]
[ext_resource type="AudioStream" uid="uid://dwnyjl8oi2gwc" path="res://assets/audio/sfx/blop.ogg" id="6_y0pjm"]
[ext_resource type="AudioStream" uid="uid://dhlp5d5he2cwc" path="res://assets/audio/sfx/hurt.ogg" id="7_cancel"]
[ext_resource type="Theme" uid="uid://bqdn1hl5c7fvl" path="res://assets/interface/themes/space-worm-theme/space_worm_theme.tres" id="8_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glr2s"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2l25"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_88x8e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tctq1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glr2s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f2l25"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88x8e"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
content_margin_left = 50.0
content_margin_top = 25.0
content_margin_right = 50.0
content_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxu6n"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 0, 1)
content_margin_left = 50.0
content_margin_top = 25.0
content_margin_right = 50.0
content_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tctq1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 0, 1)
content_margin_left = 50.0
content_margin_top = 25.0
content_margin_right = 50.0
content_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Separator"]

[node name="GameOptionsMenu" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vm04o")

[node name="GradientBackground" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("2_f8yp2")

[node name="ContainerBackground" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1500, 1000)
layout_mode = 0
offset_left = 210.0
offset_top = 40.0
offset_right = 1710.0
offset_bottom = 1040.0
color = Color(1, 1, 1, 0.36862746)

[node name="GameOptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 250.0
offset_top = -480.0
offset_right = 1750.0
offset_bottom = 480.0
grow_vertical = 2
mouse_filter = 0

[node name="TitleLabel" type="Label" parent="GameOptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="MasterVolumeBox" type="HBoxContainer" parent="GameOptionsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="GameOptionsContainer/MasterVolumeBox"]
custom_minimum_size = Vector2(325, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Master Volume:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="GameOptionsContainer/MasterVolumeBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_icons/grabber = ExtResource("3_cptyg")
theme_override_icons/grabber_highlight = ExtResource("3_cptyg")
theme_override_styles/slider = SubResource("StyleBoxFlat_glr2s")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_f2l25")
value = 85.0

[node name="MusicVolumeBox" type="HBoxContainer" parent="GameOptionsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="GameOptionsContainer/MusicVolumeBox"]
custom_minimum_size = Vector2(325, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Music Volume:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="GameOptionsContainer/MusicVolumeBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_icons/grabber = ExtResource("3_cptyg")
theme_override_icons/grabber_highlight = ExtResource("3_cptyg")
theme_override_styles/slider = SubResource("StyleBoxFlat_glr2s")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_f2l25")
value = 75.0

[node name="SoundVolumeBox" type="HBoxContainer" parent="GameOptionsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="SoundVolumeLabel" type="Label" parent="GameOptionsContainer/SoundVolumeBox"]
custom_minimum_size = Vector2(325, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "SFX Volume:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SoundVolumeSlider" type="HSlider" parent="GameOptionsContainer/SoundVolumeBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_icons/grabber = ExtResource("3_cptyg")
theme_override_icons/grabber_highlight = ExtResource("3_cptyg")
theme_override_styles/slider = SubResource("StyleBoxFlat_glr2s")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_f2l25")
value = 65.0

[node name="TextVolumeBox" type="HBoxContainer" parent="GameOptionsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="TextVolumeLabel" type="Label" parent="GameOptionsContainer/TextVolumeBox"]
custom_minimum_size = Vector2(325, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Text Volume:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextVolumeSlider" type="HSlider" parent="GameOptionsContainer/TextVolumeBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_icons/grabber = ExtResource("3_cptyg")
theme_override_icons/grabber_highlight = ExtResource("3_cptyg")
theme_override_styles/slider = SubResource("StyleBoxFlat_glr2s")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_f2l25")
value = 55.0

[node name="DifficultyBox" type="HBoxContainer" parent="GameOptionsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="GameOptionsContainer/DifficultyBox"]
custom_minimum_size = Vector2(325, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Difficulty:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DifficultySlider" type="HSlider" parent="GameOptionsContainer/DifficultyBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_icons/grabber = ExtResource("3_cptyg")
theme_override_icons/grabber_highlight = ExtResource("3_cptyg")
theme_override_styles/slider = SubResource("StyleBoxFlat_glr2s")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_f2l25")
max_value = 4.0
value = 2.0

[node name="DifficultyValueLabel" type="Label" parent="GameOptionsContainer/DifficultyBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Gymbro"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckboxesContainer" type="HBoxContainer" parent="GameOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="FullScreenContainer" type="HBoxContainer" parent="GameOptionsContainer/CheckboxesContainer"]
layout_mode = 2

[node name="FullScreenLabel" type="Label" parent="GameOptionsContainer/CheckboxesContainer/FullScreenContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Fullscreen:"
vertical_alignment = 1

[node name="FullScreenCheckbox" type="CheckBox" parent="GameOptionsContainer/CheckboxesContainer/FullScreenContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_88x8e")
theme_override_styles/disabled = SubResource("StyleBoxTexture_tctq1")
icon_alignment = 1

[node name="FramerateContainer" type="HBoxContainer" parent="GameOptionsContainer/CheckboxesContainer"]
layout_mode = 2

[node name="FramerateLabel" type="Label" parent="GameOptionsContainer/CheckboxesContainer/FramerateContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Show FPS:"
vertical_alignment = 1

[node name="FramerateCheckbox" type="CheckBox" parent="GameOptionsContainer/CheckboxesContainer/FramerateContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_glr2s")
theme_override_styles/disabled = SubResource("StyleBoxTexture_f2l25")

[node name="BottomSeparator" type="HSeparator" parent="GameOptionsContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_Separator")

[node name="ButtonsContainer" type="HBoxContainer" parent="GameOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="CloseButton" type="Button" parent="GameOptionsContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_88x8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yxu6n")
theme_override_styles/hover = SubResource("StyleBoxFlat_tctq1")
text = "Save and Close"
icon_alignment = 1

[node name="ResetButton" type="Button" parent="GameOptionsContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_88x8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yxu6n")
theme_override_styles/hover = SubResource("StyleBoxFlat_tctq1")
text = "Reset to Default"
icon_alignment = 1

[node name="ExitButton" type="Button" parent="GameOptionsContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_88x8e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yxu6n")
theme_override_styles/hover = SubResource("StyleBoxFlat_tctq1")
text = "Exit to Title"
icon_alignment = 1

[node name="ExitConfirmSound" type="AudioStreamPlayer" parent="GameOptionsContainer/ButtonsContainer"]
stream = ExtResource("4_trj4p")
bus = &"SFX"

[node name="ButtonHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hover")
bus = &"SFX"

[node name="SuccessSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y0pjm")
bus = &"SFX"

[node name="CancelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_cancel")
bus = &"SFX"

[node name="ExitDialog" type="ConfirmationDialog" parent="."]
initial_position = 1
size = Vector2i(600, 375)
always_on_top = true
theme = ExtResource("8_theme")
dialog_text = "Are you sure you want to throw in the towel?"
dialog_autowrap = true

[node name="DialogOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[connection signal="toggled" from="GameOptionsContainer/CheckboxesContainer/FullScreenContainer/FullScreenCheckbox" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="GameOptionsContainer/CheckboxesContainer/FramerateContainer/FramerateCheckbox" to="." method="_on_framerate_toggled"]
